fixed horizontal scrolling

--- a/css/mango.css
+++ b/css/mango.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden; 
+}
+
 .slider_area img {
     width: 100%;
 }
